# CSLGraphBuilder

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  migrate.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
.githooks/: pre-commit
.github/workflows/: frontend-check.yml
api/: __init__.py  auth.py  dependencies.py  job_store.py  main.py  review_store.py
api/routers/: curation.py  dev.py  documents.py  export.py  graph.py  health.py  ingest.py  verification.py
api/schemas/: curation.py  documents.py  graph.py  ingest.py
frontend/: CONTRIBUTING.md  package-lock.json  package.json  tailwind.config.js
frontend/__mocks__/: api-fixtures.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/curation/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/export/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/ingest/: page.tsx
frontend/app/process/: page.tsx
frontend/app/verification/: page.tsx
frontend/components/: AnimatedNumber.tsx  HealthDot.tsx  JobTimeline.tsx  Nav.tsx  Providers.tsx
frontend/lib/: api.ts  useJobStream.ts
frontend/scripts/: contract-check.mjs
src/graphbuilder/application/use_cases/: conflict_detection.py  curation.py  document_pipeline.py  document_processing.py  graph_visualization.py  open_targets_ingestion.py  pubmed_ingestion.py  relationship_verification.py  text_verification.py
src/graphbuilder/cli/: main.py
src/graphbuilder/core/graph/: transformer.py
src/graphbuilder/core/processing/: processor.py  semantic_chunker.py
src/graphbuilder/core/schema/: extraction.py
tests/e2e/: test_extraction_pipeline.py  test_live_ingest.py  test_pipeline.py
tests/integration/: test_document_pipeline.py  test_document_processing_use_case.py  test_entity_relationship_extraction.py  test_llm_service.py
tests/unit/: test_imports.py  test_llm_dedup.py  test_processor.py  test_transformer.py  test_verification.py
(+23 files in other folders)
